Fix footer left align.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,4 +43,5 @@ p {
 .footer {
   font-size: 11px;
   background-color: dimgray;
+  text-align: left;
 }
